[package]
name = "rllama"
version = "0.1.0"
edition = "2021"

[dependencies]
llama-cpp-2 = {path = "llama-cpp-rs/llama-cpp-2"}
hf-hub = "0.3.2"
clap = { version = "4.5.19", features = ["derive"] }
anyhow = "1.0.89"
encoding_rs = "0.8.34"

[features]
cuda = ["llama-cpp-2/cuda"]
metal =  ["llama-cpp-2/metal"]
native = ["llama-cpp-2/native"]
vulkan = ["llama-cpp-2/vulkan"]